agregando acentos html

--- a/src/cerificado-covid-19/resource/cerificado-covid-19.html
+++ b/src/cerificado-covid-19/resource/cerificado-covid-19.html
@@ -153,7 +153,7 @@
 				<ul class="grid-row">
 					<li class="grid-col">Nombre: <b>{nombre}</b></li>
 					<li class="grid-col">Apellido: <b>{apellido}</b></li>
-					<li class="grid-col">Número de Documento: <b>{nro_documento}</b></li>
+					<li class="grid-col">N&uacute;mero de Documento: <b>{nro_documento}</b></li>
 				</ul>
 			</div>
 		</div>
@@ -165,7 +165,7 @@
 				<div>
 					<ul class="grid-row-col">
 						<li class="grid-col">Dosis: <b>{vacuna.dosis}</b></li>
-						<li class="grid-col">Fecha de Aplicación: <b>{vacuna.fecha_aplicacion}</b></li>
+						<li class="grid-col">Fecha de Aplicaci&oacute;n: <b>{vacuna.fecha_aplicacion}</b></li>
 					</ul>
 					<ul class="grid-row">
 						<li class="grid-col">Marca: <b>{vacuna.marca}</b></li>
