agregando un acento en numero para resultado test covid

--- a/src/resultado-test-covid-19/resource/resultado-test-covid-19.html
+++ b/src/resultado-test-covid-19/resource/resultado-test-covid-19.html
@@ -154,7 +154,7 @@
 				<ul class="grid-row">
 					<li class="grid-col">Nombre: <b>{nombre}</b></li>
 					<li class="grid-col">Apellido: <b>{apellido}</b></li>
-					<li class="grid-col">N&acute;mero de Documento: <b>{nro_documento}</b></li>
+					<li class="grid-col">N&uacute;mero de Documento: <b>{nro_documento}</b></li>
 				</ul>
 			</div>
 		</div>
