--- a/src/cerificado-covid-19/resource/cerificado-covid-19.html
+++ b/src/cerificado-covid-19/resource/cerificado-covid-19.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
-<html lang="es">
-
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html [
+	<!ENTITY uacute "&#250;">
+]>
+<html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<style>
 		.bg-yellow {
 			background-color: #FFDB2E;
