--- a/src/cerificado-covid-19/resource/cerificado-covid-19.html
+++ b/src/cerificado-covid-19/resource/cerificado-covid-19.html
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html [
+	<!ENTITY aacute "&#225;">
+	<!ENTITY eacute "&#233;">
+	<!ENTITY iacute "&#237;">
+	<!ENTITY oacute "&#243;">
 	<!ENTITY uacute "&#250;">
+	<!ENTITY Aacute "&#193;">
+	<!ENTITY Eacute "&#201;">
+	<!ENTITY Iacute "&#205;">
+	<!ENTITY Oacute "&#211;">
+	<!ENTITY Uacute "&#218;">
 ]>
 <html>
 <head>
