agregando cambio de la acentuacion de fecha de aplicacion certificado-covid-19

--- a/src/cerificado-covid-19/resource/cerificado-covid-19.html
+++ b/src/cerificado-covid-19/resource/cerificado-covid-19.html
@@ -175,7 +175,7 @@
 				<div>
 					<ul class="grid-row-col">
 						<li class="grid-col">Dosis: <b>{vacuna.dosis}</b></li>
-						<li class="grid-col">Fecha de Aplicaci&oacute;n: <b>{vacuna.fecha_aplicacion}</b></li>
+						<li class="grid-col">Fecha de Aplicaci&#243;n: <b>{vacuna.fecha_aplicacion}</b></li>
 					</ul>
 					<ul class="grid-row">
 						<li class="grid-col">Marca: <b>{vacuna.marca}</b></li>
