--- a/src/resultado-test-covid-19/resource/resultado-test-covid-19.html
+++ b/src/resultado-test-covid-19/resource/resultado-test-covid-19.html
@@ -14,6 +14,14 @@
 <html>
 <head>
 	<style>
+		@font-face {
+            font-family: 'source-sans';
+            font-style: normal;
+            font-weight: 400;
+            src: url(fonts/SourceSans3-Regular.ttf);
+            -fs-font-subset: complete-font;
+        }
+
 		.bg-yellow {
 			background-color: #FFDB2E;
 			text-align: left;
@@ -32,13 +40,13 @@
 		}
 
 		.title {
-			font-family: nunito;
+			font-family: "source-sans";
 			font-weight: bold;
 			font-size: 2.2rem;
 		}
 
 		body {
-			font-family: "nunito";
+			font-family: "source-sans";
 			margin: auto;
 		}
 
