--- a/src/cerificado-covid-19/resource/cerificado-covid-19.html
+++ b/src/cerificado-covid-19/resource/cerificado-covid-19.html
@@ -1,16 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html [
-	<!ENTITY aacute "&#225;">
-	<!ENTITY eacute "&#233;">
-	<!ENTITY iacute "&#237;">
-	<!ENTITY oacute "&#243;">
-	<!ENTITY uacute "&#250;">
-	<!ENTITY Aacute "&#193;">
-	<!ENTITY Eacute "&#201;">
-	<!ENTITY Iacute "&#205;">
-	<!ENTITY Oacute "&#211;">
-	<!ENTITY Uacute "&#218;">
-]>
 <html>
 <head>
 	<style>
@@ -171,7 +158,7 @@
 				<ul class="grid-row">
 					<li class="grid-col">Nombre: <b>{nombre}</b></li>
 					<li class="grid-col">Apellido: <b>{apellido}</b></li>
-					<li class="grid-col">N&uacute;mero de Documento: <b>{nro_documento}</b></li>
+					<li class="grid-col">Número de Documento: <b>{nro_documento}</b></li>
 				</ul>
 			</div>
 		</div>
@@ -183,7 +170,7 @@
 				<div>
 					<ul class="grid-row-col">
 						<li class="grid-col">Dosis: <b>{vacuna.dosis}</b></li>
-						<li class="grid-col">Fecha de Aplicaci&#243;n: <b>{vacuna.fecha_aplicacion}</b></li>
+						<li class="grid-col">Fecha de Aplicación: <b>{vacuna.fecha_aplicacion}</b></li>
 					</ul>
 					<ul class="grid-row">
 						<li class="grid-col">Marca: <b>{vacuna.marca}</b></li>
